--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -486,7 +486,7 @@ textarea {
 .t-contactsPic {
   width: 750rpx;
   height: 280rpx;
-  background: url(https://weitianshi-2017.oss-cn-shanghai.aliyuncs.com/image/20170904/img-banner.png) no-repeat;
+  background: url(https://weitianshi-2017.oss-cn-shanghai.aliyuncs.com/image/banner/share_top.jpg) no-repeat;
   background-size: 100%;
 }
 
