--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -12,7 +12,7 @@
   <!--精选  -->
   <swiper-item data-current='0'>
     <!--banner轮播  -->
-    <swiper class='banner' autoplay='true' current='{{bannerIndex}}' interval='4000' duration='500' circular='true'>
+    <swiper class='banner' autoplay='true' current='{{bannerIndex}}' interval='4000' duration='500' circular='true' indicator-dots='true' indicator-active-color='#ffffff' indicator-color='rgba(255,255, 255, .3)' >
       <block wx:for="{{imgUrls}}" wx:key='item'>
         <swiper-item>
           <image src="{{item}}" class="slide-image" data-index='{{index}}' bindtap='bannerLink' />
@@ -30,7 +30,7 @@
   <swiper-item data-current='1'>
     <!--项目展示  -->
     <scroll-view scroll-y="true" bindscrolltolower="loadMore2">
-      <template is="selectProject" data="{{list:financingNeed,type:2}}"></template>
+      <template is="selectProject" data="{{list:financingNeed,type:2,timeShow:true}}"></template>
     </scroll-view>
     <!--空状态-->
     <view wx:if="{{financingNeed==''}}">
