--- a/Weitianshi/pages/matchInvestor/matchInvestor.wxss
+++ b/Weitianshi/pages/matchInvestor/matchInvestor.wxss
@@ -66,7 +66,9 @@ page {
   padding-left: 0;
   padding-right: 0;
 }
-
+.matchInvestor{
+  padding-top: 28rpx;
+} 
 .matchInvestor .investorItem {
   width: 25%;
 }
