--- a/Weitianshi/pages/my/myNew/myNew.wxml
+++ b/Weitianshi/pages/my/myNew/myNew.wxml
@@ -30,6 +30,9 @@
     </view>
   </view>
   <view class="user_right" style="position:relative;">
+    <icon class='avatarEdit'>
+      <image src='/img/icon-revise@3x.png'></image>
+    </icon>
     <image wx:if="{{user.user_avatar_url}}" class="user_pic" src="{{user.user_avatar_url}}"></image>
     <view wx:if="{{user.user_avatar_text}}" class="user_text noPic">{{user.user_avatar_text}}</view>
     <image wx:if="{{!user}}" class="user_pic" src="/img/img-avatar@3x.png"></image>
