--- a/Weitianshi/pages/search/search3/search3.wxss
+++ b/Weitianshi/pages/search/search3/search3.wxss
@@ -6,6 +6,7 @@
   padding: 16rpx 128rpx 16rpx 32rpx;
   z-index: 5;
 }
+
 .searchBox {
   align-items: center;
   height: 56rpx;
@@ -22,9 +23,11 @@
   height: 56rpx;
   width: 85%;
   line-height: 56rpx;
-  padding-left:24rpx;
+  padding-left: 24rpx;
 }
+
 /*取消*/
+
 .esc {
   /*clear:both;*/
   float: right;
@@ -32,17 +35,20 @@
   color: #40587a;
   margin-right: 32rpx;
 }
+
 .outBox {
   margin: 0 32rpx 30rpx 32rpx;
   width: auto;
   height: auto;
   position: relative;
 }
+
 .insideBox {
   padding: 32rpx 32rpx 24rpx 32rpx;
   background: #fff;
   border-radius: 8rpx;
 }
+
 .outBox .describle {
   font-size: 34rpx;
   color: #666;
@@ -62,9 +68,10 @@
   top: -6rpx;
   position: absolute;
 }
+
 .allIndustry {
   font-size: 26rpx;
-  color: #666666;
+  color: #666;
   line-height: 26rpx;
   text-align: left;
   margin-bottom: 24rpx;
@@ -94,17 +101,20 @@
   text-align: left;
   /* margin-bottom: 34rpx; */
 }
+
 .otherInfo {
   position: relative;
   padding-bottom: 30rpx;
   border-bottom: 1rpx solid #e6e6e6;
 }
+
 .others_pic {
   width: 40rpx;
   height: 40rpx;
   display: block;
   margin-right: 16rpx;
 }
+
 .user_image {
   width: 40rpx;
   height: 40rpx;
@@ -116,10 +126,12 @@
   line-height: 40rpx;
   color: #40587a;
 }
+
 .userInfo {
   width: 566rpx;
   margin-top: 9rpx;
 }
+
 .userCompany, .userCareer, .userName {
   font-size: 22rpx;
   color: #999;
@@ -138,6 +150,7 @@
   text-overflow: clip;
   overflow: none;
 }
+
 .star {
   height: 24rpx;
   width: 26rpx;
@@ -154,6 +167,7 @@
 .picFather {
   position: relative;
 }
+
 .user_pic {
   height: 104rpx;
   width: 104rpx;
@@ -172,17 +186,20 @@
   right: -220rpx;
   top: -4rpx;
 } */
-.topPic{
-  height:46rpx;
-  width:64rpx;
+
+.topPic {
+  height: 46rpx;
+  width: 64rpx;
 }
-.top{
-  height:46rpx;
-  width:64rpx;
+
+.top {
+  height: 46rpx;
+  width: 64rpx;
   position: absolute;
   right: 26rpx;
   bottom: 30rpx;
-} 
+}
+
 .nullState {
   position: absolute;
   top: 642rpx;
@@ -191,7 +208,17 @@
   color: #999;
 }
 
-
-.t-highBox{
+.t-highBox {
   display: none;
+}
+
+/*空状态  */
+
+.emptyStatus {
+  font-size: 28rpx;
+  color: #999;
+  letter-spacing: 0;
+  text-align: center;
+  padding-top: 324rpx;
+  z-index:-9; 
 }
