--- a/Weitianshi/pages/myProject/editProject/editProject.wxss
+++ b/Weitianshi/pages/myProject/editProject/editProject.wxss
@@ -1,6 +1,7 @@
 page {
   background: white;
   font-size: 28rpx;
+  height: 100%;
 }
 
 #myProject {
@@ -231,7 +232,7 @@ page {
 .modalBox {
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
-  height: 100%;
+  height: 220%;
   position: absolute;
   left: 0;
   top: 0;
@@ -244,7 +245,7 @@ page {
   margin-top: 206rpx;
   margin-left: 64rpx;
   padding: 40rpx 32rpx 32rpx 32rpx;
-  position: relative;
+  position: fixed;
   z-index:99999999;
 }
 .modalTitle{
