--- a/Weitianshi/pages/myProject/publishProject/publishProject.wxss
+++ b/Weitianshi/pages/myProject/publishProject/publishProject.wxss
@@ -245,7 +245,7 @@ page {
 .modalBox {
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
-  height: 100%;
+  height: 220%;
   position: absolute;
   left: 0;
   top: 0;
@@ -259,7 +259,7 @@ page {
   margin-top: 206rpx;
   margin-left: 64rpx;
   padding: 40rpx 32rpx 32rpx 32rpx;
-  position: relative;
+  position: fixed;
   z-index:99999999;
 }
 .modalTitle{
